Fixed code that was not compatible with Java 8